@@ -22,6 +22,7 @@ S3method(fortify,r8s)
 S3method(fortify,raxml)
 S3method(identify,gg)
 S3method(print,beastList)
+export("%+>%")
 export("%<%")
 export("%<+%")
 export("%>%")
@@ -31,6 +32,7 @@ export(MRCA)
 export(StatBalance)
 export(StatHilight)
 export(add_colorbar)
+export(alnplot)
 export(annotation_image)
 export(apeBoot)
 export(as.binary)
@@ -182,6 +184,7 @@ importFrom(ggplot2,draw_key_text)
 importFrom(ggplot2,element_blank)
 importFrom(ggplot2,element_line)
 importFrom(ggplot2,element_rect)
+importFrom(ggplot2,facet_grid)
 importFrom(ggplot2,fortify)
 importFrom(ggplot2,geom_bar)
 importFrom(ggplot2,geom_rect)
