@@ -1,5 +1,11 @@
 CHANGES IN VERSION 1.5.13
 ------------------------
+ o alnplot for plotting data with tree <2016-09-06, Tue>
+ o more parameters for column names in gheatmap <2016-09-06, Tue>
+   + colnames_angle
+   + colnames_offset_x
+   + colnames_offset_y
+   + hjust
  o offset parameter in geom_tiplab and geom_tiplab2 <2016-09-05, Mon>
  
 CHANGES IN VERSION 1.5.12
